--- a/web/package.json
+++ b/web/package.json
@@ -19,6 +19,7 @@
     "next-urql": "^3.1.1",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
+    "react-icons": "^4.3.1",
     "react-is": "^17.0.2",
     "urql": "^2.0.4"
   },
