--- a/server/package.json
+++ b/server/package.json
@@ -8,8 +8,7 @@
     "dev": "nodemon dist/index.js",
     "start": "node dist/index.js",
     "start2": "ts-node src/index.ts",
-    "dev2": "nodemon --exec ts-node src/index.ts",
-    "migrate": "mikro-orm migration:create"
+    "dev2": "nodemon --exec ts-node src/index.ts"
   },
   "keywords": [],
   "author": "",
@@ -29,9 +28,6 @@
     "typescript": "^4.3.5"
   },
   "dependencies": {
-    "@mikro-orm/cli": "^4.5.7",
-    "@mikro-orm/core": "^4.5.7",
-    "@mikro-orm/postgresql": "^4.5.7",
     "apollo-server-express": "^2.25.2",
     "argon2": "^0.28.2",
     "connect-redis": "^6.0.0",
@@ -40,10 +36,14 @@
     "express-session": "^1.17.2",
     "graphql": "^15.5.1",
     "ioredis": "^4.27.8",
+    "mongodb": "^4.4.1",
+    "mongoose": "^6.2.9",
     "nodemailer": "^6.6.3",
     "pg": "^8.6.0",
+    "razorpay": "^2.8.1",
     "reflect-metadata": "^0.1.13",
     "type-graphql": "^1.1.1",
+    "typeorm": "^0.2.41",
     "uuid": "^8.3.2",
     "yarn": "^1.22.15"
   },
